# my_backup

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  main.cpp  使用说明.md
client/: CMakeLists.txt  README.md
client/src/: main.cpp
deploy/: backup-server.service  server.conf.example
doc/: ECS_DEPLOY.md  实验报告模板.md  评分细则与分数汇总.md
gui/: CMakeLists.txt  StrategySetup.cpp
gui/include/: MainWindow.h  StrategySetup.h
gui/include/tabs/: LocalBackupTab.h  LocalRestoreTab.h  RemoteBackupTab.h  UserManagementTab.h
gui/include/widgets/: FilterSetupWidget.h
gui/include/workers/: BackupWorker.h  RegisterWorker.h  RemoteBackupWorker.h  RemoteListWorker.h
gui/src/: MainWindow.cpp  StrategySetup.cpp  main.cpp
gui/src/tabs/: LocalBackupTab.cpp  LocalRestoreTab.cpp  RemoteBackupTab.cpp  RemoteListTab.cpp  RemoteRestoreTab.cpp  UserManagementTab.cpp
gui/src/widgets/: FilterSetupWidget.cpp
gui/src/workers/: BackupWorker.cpp  RegisterWorker.cpp  RemoteBackupWorker.cpp  RemoteListWorker.cpp
gui/tabs/: LocalBackupTab.cpp  LocalBackupTab.h  RemoteBackupTab.h  RemoteListTab.h  RemoteRestoreTab.h
gui/workers/: BackupWorker.cpp  RemoteBackupWorker.cpp  RemoteBackupWorker.h  RemoteListWorker.cpp  RemoteRestoreWorker.cpp  RemoteRestoreWorker.h  RestoreWorker.cpp  RestoreWorker.h
include/compress/: CompressManager.h  RleCompressStrategy.h
include/core/: BackupEngine.h  FileInfo.h  RestoreEngine.h
include/encrypt/: IEncryptStrategy.h  VigenereEncryptStrategy.h
include/metadata/: MetadataStore.h
include/network/: BackupServer.h  NetworkBackupClient.h  NetworkRestoreClient.h  NetworkSocket.h  TransportEncryptor.h
include/pack/: TarPackStrategy.h
libbackup/: CMakeLists.txt
libbackup/include/compress/: HuffmanCompressStrategy.h  ICompressStrategy.h
libbackup/include/core/: BackupEngine.h  FileInfo.h  FileScanner.h  RestoreEngine.h  StrategyFactory.h
libbackup/include/encrypt/: EncryptManager.h  XorEncryptStrategy.h
libbackup/include/filter/: CompositeFilter.h  FilterDefs.h  FilterParser.h  FilterRule.h  IFileFilter.h
libbackup/include/metadata/: MetadataSerializer.h
libbackup/include/network/: BackupServer.h  Logger.h  NetworkBackupClient.h  NetworkProtocol.h  NetworkRestoreClient.h  NetworkSocket.h  ServerConfig.h  ServerSession.h  ServerStorage.h  UserManager.h
libbackup/include/pack/: IPackStrategy.h  IndexPackStrategy.h  PackManager.h
libbackup/src/compress/: HuffmanCompressStrategy.cpp
libbackup/src/core/: BackupEngine.cpp  FileInfo.cpp  FileScanner.cpp  RestoreEngine.cpp
libbackup/src/encrypt/: EncryptManager.cpp
libbackup/src/filter/: CompositeFilter.cpp  FilterParser.cpp  FilterRule.cpp
libbackup/src/network/: BackupServer.cpp  Logger.cpp  NetworkBackupClient.cpp  NetworkProtocol.cpp  NetworkRestoreClient.cpp  NetworkSocket.cpp  ServerConfig.cpp  ServerSession.cpp  ServerStorage.cpp  TransportEncryptor.cpp  UserManager.cpp
libbackup/src/pack/: IndexPackStrategy.cpp  TarPackStrategy.cpp
server/: CMakeLists.txt
server/src/: main.cpp
src/compress/: CompressManager.cpp  RleCompressStrategy.cpp
src/core/: BackupEngine.cpp  FileInfo.cpp  FileScanner.cpp  RestoreEngine.cpp
src/encrypt/: VigenereEncryptStrategy.cpp  XorEncryptStrategy.cpp
src/metadata/: MetadataSerializer.cpp  MetadataStore.cpp
src/network/: BackupServer.cpp  NetworkBackupClient.cpp  NetworkRestoreClient.cpp  ServerSession.cpp  ServerStorage.cpp  UserManager.cpp
src/pack/: PackManager.cpp
tests/: README.md  run_tests.py
tests/gtest/: CMakeLists.txt  test_backup_restore.cpp  test_encrypt.cpp  test_filescanner.cpp  test_filter.cpp  test_huffman.cpp  test_managers.cpp  test_metadata.cpp  test_metadata_store.cpp  test_network_loopback.cpp  test_network_nosocket.cpp  test_pack.cpp  test_rle.cpp  test_server_session.cpp
tests/integration/: run_tests.py
tests/integration/testdata/subdir/: big_repeat.txt
tests/testdata/docs/: four_kb.txt  readme.txt
